--- a/cadastro/inicio.html
+++ b/cadastro/inicio.html
@@ -11,17 +11,15 @@
 </head>
 
 <body>
-    <div class="fundo">
-
-    </div>
+   
     <header>
      
         <div class="master_texto_header">
             <div class="texto_header">
-                <h1> NOME DO APLICATIVO EBAAA</h1><!-- titulo -->
+                <h1>Glomia</h1><!-- titulo -->
             </div>
             <div class="subtexto_header">
-                <h6>PEQUENA LEGENDA PORQUE SOMOS EDUCADOS COM O USUARIO1!!!!!</h6> <!-- subtitulo -->
+                <h6>Suas ideias, suas histórias</h6> <!-- subtitulo -->
             </div>
         </div>
     </header>
